Fix element wider than viewport on mobile (was causing x-scrolling)

--- a/source/themes/quis/css/screen.scss
+++ b/source/themes/quis/css/screen.scss
@@ -542,6 +542,7 @@ footer {
 
     @media all and (max-width: $tablet) {
       font-size: $font-size-small;
+      width: auto;
     }
 
   }
